--- a/site/collections/_pages/blog.html
+++ b/site/collections/_pages/blog.html
@@ -2,7 +2,7 @@
 title: Blog2
 content_blocks:
   - _bookshop_name: page-heading
-    title: Blog
+    title: Blog2
     description: >-
       Vonge blog features productivity, tips, inspiration and strategies for
       massive profits. Find out how to set up a successful blog or how to make
