--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -2,18 +2,20 @@
 title: Home
 content_blocks:
   - _bookshop_name: hero
-    title: Hi there, I am Vanessa Marley
+    title: Hi there, I am June Myeong Lee
     description_html: >-
-      <p><strong>Photographer</strong> and <strong>Visual Content
-      Strategist</strong> from Albany. I work as a lifestyle, product, and
-      landscape photographer, creating images for a diverse range of requests,
-      from online media to printed artwork.</p>
-    image: /images/01.jpg
+      <p>I am a 3nd year student at <strong>GIST EECS</strong> . I am a
+      second-year <strong>AI Engineer and Front-End Developer</strong> who loves
+      challenges. Whenever I come across something I want to take on, I invest
+      all of my passion and have accumulated a wealth of development experience
+      through various projects. Even now, I continue to push myself with new
+      challenges and consistently strive for personal growth.</p>
+    image: /uploads/47f298b717cff61f1416131764011a50.jpg
     image_alt: Vanessa Marley's picture
     cta_button: Get in touch
-    cta_button_link: "#contact"
+    cta_button_link: '#contact'
     works_button: See my works
-    works_button_link: "#projects"
+    works_button_link: '#projects'
   - _bookshop_name: projects-section
     title: Latest Works
     description_html: >-
@@ -45,4 +47,3 @@ content_blocks:
     form_submission_email: site@example.com
     form_button_text: Send now
 ---
-
