Updated 2 files via CloudCannon

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -19,22 +19,10 @@ content_blocks:
   - _bookshop_name: projects-section
     title: Latest Works
     description_html: >-
-      <p>I show only my best works built completely with passion, simplicity,
-      and creativity!</p>
+      <p>I just started developing it, but I did my best to experience various
+      projects.</p>
     link_url: /projects
     show_projects: true
-  - _bookshop_name: testimonials-section
-    title: Happy Clients
-    description_html:
-    show_testimonials: true
-  - _bookshop_name: blog-section
-    title: Recent Posts
-    description_html: >-
-      <p>Vonge blog features productivity, tips, inspiration and strategies for
-      massive profits. Find out how to set up a successful blog or how to make
-      yours even better!</p>
-    link_url: /blog
-    show_posts: true
   - _bookshop_name: newsletter
     newsletter_title: Join my mailing list
     newsletter_description: Get inspiration, updates and, cool stuff!
