--- a/site/collections/_pages/about.html
+++ b/site/collections/_pages/about.html
@@ -5,7 +5,7 @@ content_blocks:
     title: JUNE MYONG LEE
     description:
   - _bookshop_name: page-image
-    image: /images/page-1.jpg
+    image: /uploads/47f298b717cff61f1416131764011a50-2.jpg
     image_alt: My best photo
   - _bookshop_name: content
     content_html: >-
