--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -3,13 +3,7 @@ title: Home
 content_blocks:
   - _bookshop_name: hero
     title: Hi there, I am June Myeong Lee
-    description_html: >-
-      <p>I am a 3nd year student at <strong>GIST EECS</strong> . I am a
-      second-year <strong>AI Engineer and Front-End Developer</strong> who loves
-      challenges. Whenever I come across something I want to take on, I invest
-      all of my passion and have accumulated a wealth of development experience
-      through various projects. Even now, I continue to push myself with new
-      challenges and consistently strive for personal growth.</p>
+    description_html: "<p>I am a 3rd-year student at&nbsp;<strong> GIST</strong>, majoring in <strong>Electrical Engineering and Computer Science</strong> (EECS). As a second-year <strong>AI Engineer and Front-End Developer</strong>, I have a strong passion for taking on challenges and continuously pushing myself to grow.</p><p>\_</p><p>I am a highly motivated individual who strives for personal growth by taking on new challenges and learning from each experience. My attention to detail and commitment to excellence drive me to achieve the best possible outcomes in all of my work.</p>"
     image: /uploads/47f298b717cff61f1416131764011a50.jpg
     image_alt: Vanessa Marley's picture
     cta_button: Get in touch
