--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -13,8 +13,8 @@ content_blocks:
   - _bookshop_name: projects-section
     title: Latest Works
     description_html: >-
-      <p>I just started developing it, but I did my best to experience various
-      projects.</p>
+      <p>I show only my best works built completely with passion, simplicity,
+      and creativity!</p>
     link_url: /projects
     show_projects: true
   - _bookshop_name: newsletter
