--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -28,4 +28,8 @@ content_blocks:
     form_description: Vonge comes with a built-in contact form.
     form_submission_email: site@example.com
     form_button_text: Send now
+  - _bookshop_name: testimonials-section
+    title: Team
+    description_html: ''
+    show_testimonials: true
 ---
