--- a/site/collections/_pages/team.html
+++ b/site/collections/_pages/team.html
@@ -1,10 +1,8 @@
 ---
 title: Team
 content_blocks:
-  - _bookshop_name: newsletter
-    newsletter_title: Join my mailing list
-    newsletter_description: Get inspiration, updates and, cool stuff!
-    newsletter_identifier: >-
-      frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
-    newsletter_button: Subscribe
+  - _bookshop_name: testimonials-section
+    title: Team
+    description_html: ''
+    show_testimonials: true
 ---
