Updated 'site/collections/_pages/elements.html' via CloudCannon

--- a/site/collections/_pages/elements.html
+++ b/site/collections/_pages/elements.html
@@ -1,5 +1,5 @@
 ---
-title: Elements
+title: Not Prepared Yet
 content_blocks:
   - _bookshop_name: page-heading
     title: Elements
@@ -42,4 +42,3 @@ content_blocks:
       frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&amp;id=3038727cc3
     newsletter_button: Subscribe
 ---
-
