Updated 'site/collections/_pages/elements.html' via CloudCannon

--- a/site/collections/_pages/elements.html
+++ b/site/collections/_pages/elements.html
@@ -2,7 +2,7 @@
 title: Not Prepared Yet
 content_blocks:
   - _bookshop_name: page-heading
-    title: Elements
+    title: Not Prepared Yet
     description:
   - _bookshop_name: page-image
     image: /images/page-2.jpg
