Updated 'site/collections/_pages/index.html' via CloudCannon

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -6,8 +6,8 @@ content_blocks:
     description_html: "<p>I am a 3rd-year student at&nbsp;<strong> GIST</strong>, majoring in <strong>Electrical Engineering and Computer Science</strong> (EECS). As a second-year <strong>AI Engineer and Front-End Developer</strong>, I have a strong passion for taking on challenges and continuously pushing myself to grow.</p><p>\_</p><p>I am a highly motivated individual who strives for personal growth by taking on new challenges and learning from each experience. My attention to detail and commitment to excellence drive me to achieve the best possible outcomes in all of my work.</p>"
     image: /uploads/47f298b717cff61f1416131764011a50.jpg
     image_alt: Vanessa Marley's picture
-    cta_button: Get in touch
-    cta_button_link: '#contact'
+    cta_button: CV download
+    cta_button_link:
     works_button: See my works
     works_button_link: '#projects'
   - _bookshop_name: projects-section
