Updated 'site/collections/_pages/index.html' via CloudCannon

--- a/site/collections/_pages/index.html
+++ b/site/collections/_pages/index.html
@@ -7,7 +7,7 @@ content_blocks:
     image: /uploads/47f298b717cff61f1416131764011a50.jpg
     image_alt: Vanessa Marley's picture
     cta_button: CV download
-    cta_button_link:
+    cta_button_link: /uploads/CV_LeeJuneMyeon.pdf
     works_button: See my works
     works_button_link: '#projects'
   - _bookshop_name: projects-section
